# Vectora

./: .env  .gitignore  ANALISIS_ESTADO.txt  ANALISIS_PROFUNDO.md  ANALISIS_PROYECTO.md  AUDITORIA_FUNCIONALIDADES.md  CHANGELOG.md  CHECKLIST_EJECUTIVO.md  CONTRIBUTING.md  CORRECCIONES_FASE_D.md  DARK_MODE_COMPLETADO.md  DARK_MODE_IMPLEMENTACION.md  DIAGNOSTICO_PROFUNDO.md  DOCUMENTACION_TECNICA_LOCALPDF_V5.md  EJEMPLOS_ANIMACIONES.py  ESTADO_ACTUAL.md  ESTADO_COMPLETITUD_VISUAL.md  GUIA_IMPLEMENTACION_VISUAL.md  GUIA_INTEGRACION_COMPONENTES.md  GUIA_RAPIDA_LANZAMIENTO.md  GUIA_RAPIDA_REDISENO.md  HERRAMIENTAS.md  INDEX_CAMBIOS_COMPLETO.md  INFORME_TECNICO_DETALLADO.md  INSTRUCCIONES_BUILD.md  LICENSE  MEJORAS_VISUALES_DETALLES.py  PLAN_ACCION_REDISENO.md  PLAN_MEJORAMIENTO.md  PRUEBAS_REALIZADAS.md  README.md  README_ANALISIS.txt  README_BAT.md  REDISENO_VISUAL_COMPLETADO.md  RESUMEN_ANALISIS.md  RESUMEN_ANALISIS_FINAL.md  RESUMEN_BUILD.md  RESUMEN_CAMBIOS_VISUALES.md  RESUMEN_CORRECCION_PYTHON314.md  RESUMEN_FINAL_CORRECCIONES.md  (+67 more)
PROYECTO_EJEMPLO/: DOCUMENTACION_FUNCIONALIDADES_COMPLETA.md  DOCUMENTACION_LOCALPDF_V5.md  DOCUMENTACION_TECNICA_LOCALPDF_V5.md  ESPECIFICACIONES_VISUALES_DETALLADAS.md  MODO_OSCURO_APPLE.md  README.md  README_ICONOS.md  generar_iconos.sh  generate_icons.py
PROYECTO_EJEMPLO/app/: App.tsx
backend/core/: __init__.py  exceptions.py  operation_result.py  workflow_engine.py  workflow_executor.py
backend/services/: __init__.py  batch_processor.py  ocr_service.py  pdf_compressor.py  pdf_converter.py  pdf_merger.py  pdf_security.py  pdf_splitter.py  pdf_watcher.py
config/: __init__.py  preferences.py  settings.py
icons/: icons.py  icons.qrc
maintenance/: auto_fix_and_verify.bat  check_quality.bat  clean_code.bat  cleanup_legacy.bat  debug_runner.py  fix_all_widgets.bat  fix_security_widget.bat  reinstall_env.bat  reproduce_merge_error.py  test_widgets.bat  verify_security_env.bat
temp/: verify_visuals.py
tests/: .gitignore  README.md  __init__.py  check_project_health.bat  conftest.py  run_compressor_test.bat  run_logging_test.bat  run_ocr_test.bat  run_security_test.bat  run_watcher_test.bat  run_workflow_test.bat  test_batch.py  test_converter.py  test_history_manager.py  test_logging.bat  test_ocr.py  test_ocr_service.py  test_pdf_compressor.py  test_pdf_converter.py  test_pdf_merger.py  test_pdf_security.py  test_pdf_splitter.py  test_splitter.py  test_validators.py
tools/: apply_backend_refactor.py  create_icon.py  fix_code.py
ui/: main_window.py
ui/components/: dashboard.py  drag_drop_helper.py  drag_drop_zone.py  enhanced_drag_drop_zone.py  (+5 more)
utils/: __init__.py  file_handler.py  history_manager.py  logger.py  notification_manager.py  validators.py
(+28 files in other folders)
